boltffi_backend/tests/snapshots/swift__swift_target_allocates_scoped_optional_initializer_locals.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"associated/scoped_optional_enum_initializer\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public enum SearchMode: UInt8, Hashable, Sendable, CaseIterable {
    case exact = 1
    case prefix = 2

    @usableFromInline init(fromC c: UInt8) {
        self = SearchMode(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }

    public init?(fromLabel boltffiResultValue: String) {
        let boltffiBoltffiResultValueBytes = boltffiEncode { boltffiBoltffiResultValueWriter in boltffiBoltffiResultValueWriter.writeString(boltffiResultValue) }
        let boltffiResultValue2 = boltffiBoltffiResultValueBytes.withUnsafeBufferPointer { boltffiBoltffiResultValueBuffer in
            let boltffiResult = boltffi_method_enum_demo_search_mode_from_label(boltffiBoltffiResultValueBuffer.baseAddress!, UInt(boltffiBoltffiResultValueBuffer.count))
            defer { boltffi_free_buf(boltffiResult) }
            return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readOptional { boltffiReader in SearchMode(rawValue: boltffiReader.readU8())! } }
        }
        guard let boltffiResultValue2 = boltffiResultValue2 else { return nil }
        self = boltffiResultValue2
    }

    public init?(fromLabels primary: String, fallback: String) {
        let boltffiPrimaryBytes = boltffiEncode { boltffiPrimaryWriter in boltffiPrimaryWriter.writeString(primary) }
        let boltffiResultValue = boltffiPrimaryBytes.withUnsafeBufferPointer { boltffiPrimaryBuffer in
            let boltffiFallbackBytes = boltffiEncode { boltffiFallbackWriter in boltffiFallbackWriter.writeString(fallback) }
            let boltffiResultValue = boltffiFallbackBytes.withUnsafeBufferPointer { boltffiFallbackBuffer in
                let boltffiResult = boltffi_method_enum_demo_search_mode_from_labels(
                    boltffiPrimaryBuffer.baseAddress!,
                    UInt(boltffiPrimaryBuffer.count),
                    boltffiFallbackBuffer.baseAddress!,
                    UInt(boltffiFallbackBuffer.count)
                )
                defer { boltffi_free_buf(boltffiResult) }
                return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readOptional { boltffiReader in SearchMode(rawValue: boltffiReader.readU8())! } }
            }
            return boltffiResultValue
        }
        guard let boltffiResultValue = boltffiResultValue else { return nil }
        self = boltffiResultValue
    }
}
