boltffi_backend/tests/snapshots/swift__swift_target_passes_mutable_primitive_slices_inout.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"direct_vector/mutable_primitive_slice_parameter\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func increment(values: inout [UInt64]) {
    _ = values.withUnsafeMutableBufferPointer { boltffiValuesBuffer in
        boltffi_function_demo_increment(boltffiValuesBuffer.baseAddress, UInt(boltffiValuesBuffer.count))
    }
}
