boltffi_backend/tests/snapshots/swift__swift_target_passes_primitive_direct_vectors.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"direct_vector/primitive_vector_parameter\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func sum(values: [Int32]) -> Int32 {
    return values.withUnsafeBufferPointer { boltffiValuesBuffer in
        return boltffi_function_demo_sum(boltffiValuesBuffer.baseAddress, UInt(boltffiValuesBuffer.count))
    }
}
