boltffi_backend/tests/snapshots/swift__swift_target_preserves_rust_pascal_type_spelling.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/acronym_class\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class GPSSimulator {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_gps_simulator(handle) }
    }

    public init(enabled: Bool) {
        self.handle = boltffi_init_class_demo_gps_simulator_new(enabled)
    }

    public func enabled() -> Bool {
        return boltffi_method_class_demo_gps_simulator_enabled(self.handle)
    }
}
