boltffi_backend/tests/snapshots/swift__swift_target_propagates_errors_through_unit_vector_calls.snap
---
source: boltffi_backend/tests/swift.rs
expression: rendered
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public enum ValidationError: Int32, Hashable, Sendable, CaseIterable, Error {
    case empty = 0

    @usableFromInline init(fromC c: Int32) {
        self = ValidationError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public final class Validator {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_validator(handle) }
    }

    public init() {
        self.handle = boltffi_init_class_demo_validator_new()
    }

    public func validate(ids: [Int64]) throws {
        _ = try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
            let boltffiError = boltffi_method_class_demo_validator_validate(self.handle, boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count))
            if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
                defer { boltffi_free_buf(boltffiError) }
                throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
            }
        }
    }
}

public func validateIds(ids: [Int64]) throws {
    _ = try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        let boltffiError = boltffi_function_demo_validate_ids(boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count))
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
        }
    }
}

public func validatePairs(ids: [Int64], weights: [Double]) throws {
    _ = try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        _ = try weights.withUnsafeBufferPointer { boltffiWeightsBuffer in
            let boltffiError = boltffi_function_demo_validate_pairs(
                boltffiIdsBuffer.baseAddress,
                UInt(boltffiIdsBuffer.count),
                boltffiWeightsBuffer.baseAddress,
                UInt(boltffiWeightsBuffer.count)
            )
            if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
                defer { boltffi_free_buf(boltffiError) }
                throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
            }
        }
    }
}

public func validatePoints(points: [Point]) throws {
    var boltffiPointsStorage: [___Point] = []
    boltffiPointsStorage.reserveCapacity(points.count)
    for item in points {
        boltffiPointsStorage.append(item.cValue)
    }
    _ = try boltffiPointsStorage.withUnsafeBytes { boltffiPointsBuffer in
        let boltffiError = boltffi_function_demo_validate_points(boltffiPointsBuffer.baseAddress?.assumingMemoryBound(to: UInt8.self), UInt(boltffiPointsBuffer.count))
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
        }
    }
}

public func validateNames(ids: [Int64], names: [String]) throws {
    _ = try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        let boltffiNamesBytes = boltffiEncode { boltffiNamesWriter in boltffiNamesWriter.writeArray(names) { boltffiNamesWriter, boltffiValue0 in boltffiNamesWriter.writeString(boltffiValue0) } }
        try boltffiNamesBytes.withUnsafeBufferPointer { boltffiNamesBuffer -> Void in
            let boltffiError = boltffi_function_demo_validate_names(
                boltffiIdsBuffer.baseAddress,
                UInt(boltffiIdsBuffer.count),
                boltffiNamesBuffer.baseAddress!,
                UInt(boltffiNamesBuffer.count)
            )
            if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
                defer { boltffi_free_buf(boltffiError) }
                throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
            }
        }
    }
}

public func validateSlice(ids: [Int64]) throws {
    _ = try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        let boltffiError = boltffi_function_demo_validate_slice(boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count))
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
        }
    }
}

public func validateMutableSlice(ids: inout [Int64]) throws {
    _ = try ids.withUnsafeMutableBufferPointer { boltffiIdsBuffer in
        let boltffiError = boltffi_function_demo_validate_mutable_slice(boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count))
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
        }
    }
}

public func countIds(ids: [Int64]) throws -> UInt64 {
    return try ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        var boltffiResult: UInt64 = UInt64()
        let boltffiError = boltffi_function_demo_count_ids(boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count), &boltffiResult)
        if boltffiError.ptr != nil || Int(boltffiError.len) != 0 {
            defer { boltffi_free_buf(boltffiError) }
            throw boltffiDecodeOwnedBuf(boltffiError.ptr, Int(boltffiError.len)) { boltffiErrorReader in ValidationError(rawValue: boltffiErrorReader.readI32())! }
        }
        return boltffiResult
    }
}

public func discardIds(ids: [Int64]) {
    _ = ids.withUnsafeBufferPointer { boltffiIdsBuffer in
        boltffi_function_demo_discard_ids(boltffiIdsBuffer.baseAddress, UInt(boltffiIdsBuffer.count))
    }
}
